--- a/package.json
+++ b/package.json
@@ -3,16 +3,32 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "npm-run-all --parallel start lint:watch",
+    "lint:watch": "node node_modules/eslint-watch/bin/esw --watch",
+    "create": "sequelize db:create dbevents --config=config/config.json",
+    "migrations": "sequelize db:migrate --config=config/config.json",
+    "seed": "sequelize db:seed:all --seeders-path seeders --config=config/config.json",
+    "drop": "sequelize db:drop --config=config/config.json",
+    "recreate": "npm-run-all drop create migrations seed"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.17.2",
+    "client-sessions": "^0.8.0",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2",
+    "eslint": "^4.18.2",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-watch": "^3.1.3",
+    "express": "^4.15.5",
+    "init": "^0.1.2",
+    "morgan": "^1.8.2",
+    "mysql": "^2.15.0",
+    "mysql2": "^1.5.2",
+    "npm-run-all": "^4.1.2",
+    "promise": "^8.0.1",
+    "pug": "^2.0.1",
+    "sequelize": "^4.36.0",
+    "serve-favicon": "^2.4.5",
     "socket.io": "^2.0.4",
     "socket.io.express": "0.0.1"
   }
