--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "open:src": "node app.js"
   },
   "dependencies": {
+    "async": "^2.6.1",
     "body-parser": "^1.17.2",
     "client-sessions": "^0.8.0",
     "config": "^1.30.0",
