--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "async": "^2.6.1",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.17.2",
     "client-sessions": "^0.8.0",
     "config": "^1.30.0",
