--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm-run-all --parallel open:src lint:watch",
-    "lint:watch": "node node_modules/eslint-watch/bin/esw --watch",
+    "start": "nodemon app.js",
     "create": "sequelize db:create dbevents --config=config/local.json",
     "migrations": "sequelize db:migrate --config=config/local.json",
     "seed": "sequelize db:seed:all --seeders-path seeders --config=config/local.json",
     "drop": "sequelize db:drop --config=config/local.json",
-    "recreate": "npm-run-all drop create migrations seed",
-    "open:src": "node app.js"
+    "recreate": "npm-run-all drop create migrations seed"
+  },
+  "nodemonConfig": {
+    "delay": "500"
   },
   "dependencies": {
     "async": "^2.6.1",
@@ -20,9 +21,7 @@
     "config": "^1.30.0",
     "cookie-parser": "^1.4.3",
     "debug": "~2.6.3",
-    "eslint": "^4.18.2",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-watch": "^3.1.3",
+    "eslint": "^5.0.1",
     "express": "^4.15.5",
     "init": "^0.1.2",
     "morgan": "^1.8.2",
@@ -35,5 +34,10 @@
     "serve-favicon": "^2.4.5",
     "socket.io": "^2.0.4",
     "socket.io.express": "0.0.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-import": "^2.13.0",
+    "heapdump": "^0.3.9",
+    "nodemon": "^1.17.5"
   }
 }
