--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "client-sessions": "^0.8.0",
     "config": "^1.30.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.3",
     "eslint": "^5.0.1",
     "express": "^4.15.5",
