--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "scripts": {
     "start": "nodemon app.js",
-    "create": "sequelize db:create dbevents --config=config/local.json",
-    "migrations": "sequelize db:migrate --config=config/local.json",
-    "seed": "sequelize db:seed:all --seeders-path seeders --config=config/local.json",
-    "drop": "sequelize db:drop --config=config/local.json",
-    "recreate": "npm-run-all drop create migrations seed"
+    "create": "sequelize-cli db:create dbevents --config=config/local.json",
+    "migrations": "sequelize-cli db:migrate --config=config/local.json",
+    "seed": "sequelize-cli db:seed:all --seeders-path seeders --config=config/local.json",
+    "drop": "sequelize-cli db:drop --config=config/local.json",
+    "recreate": "npm-run-all drop create migrations"
   },
   "nodemonConfig": {
     "delay": "500"
   },
   "dependencies": {
     "async": "^2.6.1",
-    "bcrypt": "^2.0.1",
+    "bcryptjs": "2.4.3",
     "body-parser": "^1.17.2",
     "client-sessions": "^0.8.0",
     "config": "^1.30.0",
@@ -32,6 +32,7 @@
     "promise": "^8.0.1",
     "pug": "^2.0.1",
     "sequelize": "^4.36.0",
+    "sequelize-cli": "6.2.0",
     "serve-favicon": "^2.4.5",
     "socket.io": "^2.0.4",
     "socket.io.express": "0.0.1"
